Backports from 1.2.x: Fixed: Layout issue ( too much padding ) (cherry picked from commit fbd73f8)

--- a/gui/themes/default/assets/css/ui.css
+++ b/gui/themes/default/assets/css/ui.css
@@ -1382,6 +1382,10 @@ table .graph {
     width: 100%;
 }
 
+.ui-accordion .ui-accordion-content {
+    padding: 0;
+}
+
 iframe {
     width: 100%;
     height: 100%;
